playground/notas_tests/valid/char-03.hulk
// $ esto no es codigo
print(1);
