playground/notas_tests/invalid/cmt-03.hulk
print(1 + "x"); // error aqui
